<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background" >

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNick"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:text="@string/text_view_name" 
        android:textColor="#000000"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/regButton"
        style="@style/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextPass"
        android:layout_below="@+id/registerTextView"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/loginButton"
        android:text="@string/register_button"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" 
        />

    <EditText
        android:id="@+id/editTextNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNick"
        android:layout_below="@+id/editTextNick"
        android:layout_marginTop="17dp"
        android:text="@string/text_view_pass"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPass"
        android:layout_below="@+id/textViewPass"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_alignRight="@+id/textViewPass"
        android:layout_below="@+id/editTextPass"
        android:layout_marginTop="58dp"
        android:text="@string/login_button"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/loginButton"
        android:layout_toRightOf="@+id/loginButton"
        android:text="@string/register_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>